playgrounds/devops/kubernetes/nginx-ingress-controller/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: dockersamples/static-site
          ports:
            - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: dockersamples/static-site
          ports:
            - containerPort: 80
