playgrounds/devops/kubernetes/nginx-ingress-controller/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
    - host: test.akomljen.com
      http:
        paths:
          - backend:
              serviceName: appsvc1
              servicePort: 80
            path: /app1
          - backend:
              serviceName: appsvc2
              servicePort: 80
            path: /app2
