playgrounds/devops/kubernetes/nginx-ingress-controller/nginx-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: test.akomljen.com
      http:
        paths:
          - backend:
              serviceName: nginx-ingress
              servicePort: 18080
            path: /nginx_status
